Flesh out transition fade in, alignment fixes.

--- a/app/components/application/application.styl
+++ b/app/components/application/application.styl
@@ -96,6 +96,7 @@
 
 @media desktopMinWidthQuery
   [data-component="application"] .modal
+    box-shadow 0 2px 8px rgba(0,0,0,0.4)
     margin 1.5em 0
 
 @media mobileMaxWidthQuery
